# prisma-library

./: Cargo.toml  Cross.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.cross-buildkit/: install-openssl.sh
.github/: dependabot.yaml
.github/workflows/: build-c-header.yaml  build-linux-so.yaml  build-macos-dylib.txt  build-macos-dylib.yaml  c-api.yaml  c-header-build.yaml  commit-test.yaml  release.yaml  rust.yml  rust.yml.ignore  temp-build.yaml  test.yaml
examples/dart-ffi/: pubspec.yaml
examples/dart-ffi/lib/: dart_ffi.dart
examples/dart-ffi/lib/src/: prisma_bindings.dart
examples/dart-ffi/test/: dart_ffi_test.dart
src/: dmmf.rs  error.rs  lib.rs  query_engine.rs  schema.rs  version.rs
src/engine/: connect.rs  core.rs  create.rs  disconnect.rs  instance.rs  mod.rs  query.rs
src/engine/transaction/: commit.rs  mod.rs  rollback.rs  start.rs
src/schema/: format.rs
