[package]
name = "prisma-query-engine-c-api"
version = "0.1.0"
edition = "2021"
authors = ["Seven Du <whine.whitish.0u@icloud.com>"]
repository = "https://github.com/odroe/prisma"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[features]
vendored-openssl = ["sql-connector/vendored-openssl"]

[dependencies]
datamodel = { git = "https://github.com/prisma/prisma-engines" }
datamodel-connector = { git = "https://github.com/prisma/prisma-engines" }
query-core = { git = "https://github.com/prisma/prisma-engines" }
query-connector = { git = "https://github.com/prisma/prisma-engines" }
prisma-models = { git = "https://github.com/prisma/prisma-engines" }
request-handlers = { git = "https://github.com/prisma/prisma-engines" }
user-facing-errors = { git = "https://github.com/prisma/prisma-engines" }
sql-connector = { git = "https://github.com/prisma/prisma-engines", package = "sql-query-connector" }

libc = "0.2.139"
thiserror = "1.0.40"
serde = "1.0.152"
serde_json = "1.0.91"
url = "2.3.1"
connection-string = "0.1.14"
tokio = "1.24.1"
futures = "0.3.25"
once_cell = "1.17.0"
intmap = "2.0.0"

[build-dependencies]
cbindgen = "0.24.3"
