[package]
name = "prisma-capi"
version = "0.1.0"
edition = "2021"
authors = ["Seven Du <whine.whitish.0u@icloud.com>"]
repository = "https://github.com/medz/prisma-capi"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]
name = "prisma"

[dependencies]
libc = "0.2.149"
once_cell = "1.18.0"
prisma-fmt = { git = "https://github.com/prisma/prisma-engines", version = "0.1.0" }

[build-dependencies]
cbindgen = "0.26.0"
