[package]
name = "prisma-library"
version = "0.1.0"
edition = "2021"
authors = ["Seven Du <shiweidu@outlook.com>"]
repository = "https://github.com/medz/prisma-library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]
name = "prisma"

[dependencies]
libc = "0.2.149"
once_cell = "1.18.0"
serde_json = "1.0.108"
prisma-fmt = { git = "https://github.com/prisma/prisma-engines", version = "0.1.0" }
tokio = "1.33.0"
psl = { git = "https://github.com/prisma/prisma-engines", version = "0.1.0" }
query-core = { git = "https://github.com/prisma/prisma-engines", version = "0.1.0" }
serde = "1.0.190"
request-handlers = { git = "https://github.com/prisma/prisma-engines", version = "0.1.0" }

[build-dependencies]
cbindgen = "0.26.0"
